Add pagination to search
